unpackaged/objects/ME_Source_Map__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Source</label>
        <referenceTo>ME_Data_Source__c</referenceTo>
        <relationshipLabel>Source Maps</relationshipLabel>
        <relationshipName>Source_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Source Map</label>
    <nameField>
        <displayFormat>MAP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>